# AST-Based-Agent-Skills

./: .gitignore  Makefile  README.md  batch_jobs.py  dev.ipynb  pyproject.toml
ast_skills/common/: api.py  graph.py
ast_skills/data_gen/: datamodels.py  dataset.py  openai_batch_chat_request.py  openai_batch_jobs.py  retriever_batch_join.py  retriever_training_dataset.py  skills_data_collect.py  synthetic_data_gen.py
ast_skills/persona_data_gen/: datamodels.py  prompt_jobs.py  query_prompts.py  template_loader.py
ast_skills/persona_data_gen/templates/: persona_generation_system.jinja  query_generation_system.jinja  query_generation_user.jinja  scenario_generation_system.jinja
ast_skills/retriever/: chroma_embeddings.py  cluster_visualizer.py  datamodels.py  evaluate_retriever.py  maximal_marginal_relevance_question.py
ast_skills/rich/: dev.ipynb
ast_skills/train/: build_dataset.py  datamodels.py  progress_bar.py  validate_training_data.py
